# AI_sandbox

./: .gitignore  README.md
api/: README.md  jokes_api.py
basic_llm_call/: README.md  basic_prompt.py
chat-ai/: app.py
chat-ai/demo/: 02_chatlas_demo.py  03_chatbot_demo.py  README.md
chatbot_app/: README.md  app.py
chatbot_app/demo/: 01_shiny_chat_demo.py
mcp_google_maps/: README.md  google_maps.py  main.py  maps_api_examples.py  pyproject.toml  template.env  zapier.py
models/: README.md  pyproject.toml
models/Bayesian/: hyper_tune_bayesian_opt.py
models/Bayesian/pymc_exercises/: pymc_models.py
models/classification/: iris_sklearn_vs_pytorch.py  naive_bayes.py  wine.py
models/regression/: lr_xgb_lgm.py
multi_armed_bandit/: app.py  bandit.py  main.py  pyproject.toml  requirements.txt
plots/: README.md  economicdata_date_slider.py  gapminder_economic_data.py  pyproject.toml  sample_altair_plots.py  statplots.py
rag/: README.md  app.py
setup/: requirements.txt  setup_virtual_env.sh
