[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "altair>=5.5.0",
    "arviz>=0.22.0",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "numpy<2",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "pymc>=5.25.1",
    "pymc-marketing>=0.15.1",
    "pytensor>=2.31.7",
    "scikit-learn>=1.7.1",
    "statsmodels>=0.14.5",
    "torch>=2.2.2",
    "xgboost>=3.0.3",
]


# https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",  # mac
    "sys_platform == 'darwin' and platform_machine == 'x86_64'", # intel
]
